client/src/components/NavBar/NavBar.css
#navigation {
  background-color: #FDF3E7;
}

nav {
  height: 100%;
  display: flex;
  align-items: center;
}

.showMenuNav {
  display: block;
  position: absolute;
  height: 40vh;
  width: 25vh;
  top: 0;
  margin-top: 96px;
  right: 0;
  z-index: 10;
  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
    0 4px 6px -4px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
    0 4px 6px -4px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  -webkit-animation: dropdown backwards 1s;
  -moz-animation: dropdown backwards 1s;
  -o-animation: dropdown backwards 1s;
}

.menu-blur {
  backdrop-filter: blur(2px);
  background-color: rgb(255 255 255 / 0.3);
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 0 0 0 10px;

  -webkit-animation: dropdown backwards 1s;
  -moz-animation: dropdown backwards 1s;
  -o-animation: dropdown backwards 1s;
}

@media screen and (max-width: 1023px) {
  .showMenuNav {
    margin-top: 96px;
    border-radius: 0 0 0 10px;
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes dropdown {
  from {
    height: 0vh;
    width: 0vh;
    border-radius: 0 0 0 100px;
    opacity: 0;
  }

  to {
    height: 40vh;
    width: 25vh;
    border-radius: 0 0 0 10px;
    opacity: 1;
  }
}

